[package]
name = "tlsign"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = { version = "0.23.12", default-features = false, features = ["logging", "std", "tls12", "ring"] }
getrandom = { path = "getrandom" }
ureq = { version = "2.10.0", default-features = false }
rustls-native-certs = "0.7.1"

[patch.crates-io]
getrandom = { path = "getrandom" }
